--- a/package.json
+++ b/package.json
@@ -14,9 +14,26 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "flubber": "^0.4.2",
+    "framer": "^1.2.3",
     "gatsby": "^2.22.15",
+    "gatsby-image": "^2.4.7",
+    "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-offline": "^3.2.9",
+    "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sass": "^2.3.4",
+    "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-images": "^3.3.10",
+    "gatsby-source-filesystem": "^2.0.28",
+    "gatsby-transformer-sharp": "^2.5.5",
+    "node-sass": "^4.14.1",
+    "popmotion": "^8.7.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
+    "react-pose": "^3.1.0-rc"
   },
   "devDependencies": {
     "prettier": "2.0.5"
