--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.0",
     "flubber": "^0.4.2",
     "framer": "^1.2.3",
     "gatsby": "^2.22.15",
@@ -30,6 +31,7 @@
     "gatsby-transformer-sharp": "^2.5.5",
     "node-sass": "^4.14.1",
     "popmotion": "^8.7.3",
+    "postcss-cli": "^7.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
@@ -44,5 +46,9 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "browserslist": [
+    ">0.25%",
+    "not dead"
+  ]
 }
