--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "animejs": "^3.2.0",
     "autoprefixer": "^9.8.0",
     "flubber": "^0.4.2",
     "framer": "^1.2.3",
@@ -24,18 +25,21 @@
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.4",
-    "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-sharp": "^2.6.12",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.3.10",
     "gatsby-source-filesystem": "^2.0.28",
+    "gatsby-transformer-remark": "^2.8.17",
     "gatsby-transformer-sharp": "^2.5.5",
+    "gsap": "^3.3.4",
     "node-sass": "^4.14.1",
     "popmotion": "^8.7.3",
     "postcss-cli": "^7.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-pose": "^3.1.0-rc"
+    "react-pose": "^3.1.0-rc",
+    "sharp": "^0.25.4"
   },
   "devDependencies": {
     "prettier": "2.0.5"
