--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "gatsby-transformer-remark": "^2.8.17",
     "gatsby-transformer-sharp": "^2.5.5",
     "gsap": "^3.3.4",
+    "kute.js": "^2.0.7",
     "node-sass": "^4.14.1",
     "popmotion": "^8.7.3",
     "postcss-cli": "^7.1.1",
+    "rc-tween-one": "^2.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
