--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss-cli": "^7.1.1",
     "rc-tween-one": "^2.7.2",
     "react": "^16.12.0",
+    "react-div-100vh": "^0.3.8",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-pose": "^3.1.0-rc",
