--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "autoprefixer": "^9.8.0",
     "flubber": "^0.4.2",
     "framer": "^1.2.3",
+    "framer-motion": "^1.11.1",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-offline": "^3.2.9",
+    "gatsby-plugin-page-transitions": "^1.0.8",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "^2.6.12",
+    "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.3.10",
     "gatsby-source-filesystem": "^2.0.28",
@@ -42,7 +46,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-pose": "^3.1.0-rc",
-    "sharp": "^0.25.4"
+    "react-scroll-to-component": "^1.0.2",
+    "sharp": "^0.25.4",
+    "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
     "prettier": "2.0.5"
