--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.16",
     "animejs": "^3.2.0",
     "autoprefixer": "^9.8.0",
     "flubber": "^0.4.2",
-    "framer": "^1.2.3",
+    "framer": "^1.2.5",
     "framer-motion": "^1.11.1",
-    "gatsby": "^2.22.15",
-    "gatsby-image": "^2.4.7",
+    "gatsby": "^2.24.2",
+    "gatsby-image": "^2.4.12",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-offline": "^3.2.9",
@@ -28,27 +29,29 @@
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.4",
-    "gatsby-plugin-sharp": "^2.6.12",
+    "gatsby-plugin-sharp": "^2.6.18",
     "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.3.10",
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-remark": "^2.8.17",
-    "gatsby-transformer-sharp": "^2.5.5",
+    "gatsby-transformer-sharp": "^2.5.10",
     "gsap": "^3.3.4",
     "kute.js": "^2.0.7",
     "node-sass": "^4.14.1",
     "popmotion": "^8.7.3",
     "postcss-cli": "^7.1.1",
     "rc-tween-one": "^2.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-div-100vh": "^0.3.8",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-pose": "^3.1.0-rc",
     "react-scroll-to-component": "^1.0.2",
+    "react-slick": "^0.26.1",
     "sharp": "^0.25.4",
-    "smooth-scroll": "^16.1.3"
+    "smooth-scroll": "^16.1.3",
+    "swiper": "^6.0.2"
   },
   "devDependencies": {
     "prettier": "2.0.5"
