--- a/package.json
+++ b/package.json
@@ -42,13 +42,16 @@
     "postcss-cli": "^7.1.1",
     "rc-tween-one": "^2.7.2",
     "react": "^16.13.1",
+    "react-device-detect": "^1.13.1",
     "react-div-100vh": "^0.3.8",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-pose": "^3.1.0-rc",
+    "react-scroll": "^1.8.0",
     "react-slick": "^0.26.1",
     "sharp": "^0.25.4",
     "smooth-scroll": "^16.1.3",
+    "smoothscroll-polyfill": "^0.4.4",
     "swiper": "^6.0.2"
   },
   "devDependencies": {
