--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.8.0",
     "animejs": "^3.2.0",
     "autoprefixer": "^9.8.0",
     "flubber": "^0.4.2",
@@ -35,6 +36,7 @@
     "gatsby-remark-images": "^3.3.10",
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-source-strapi": "0.0.12",
+    "gatsby-source-stripe": "^3.1.1",
     "gatsby-transformer-remark": "^2.8.17",
     "gatsby-transformer-sharp": "^2.5.10",
     "gsap": "^3.3.4",
