--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^1.8.0",
     "animejs": "^3.2.0",
     "autoprefixer": "^9.8.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "flubber": "^0.4.2",
     "framer": "^1.2.5",
     "framer-motion": "^1.11.1",
@@ -24,7 +25,7 @@
     "gatsby-image": "^2.4.12",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-favicon": "^3.1.6",
-    "gatsby-plugin-offline": "^3.2.9",
+    "gatsby-plugin-offline": "^3.2.23",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.3.4",
@@ -32,6 +33,7 @@
     "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-plugin-snipcart": "^1.1.2",
     "gatsby-plugin-snipcart-advanced": "^1.0.0",
+    "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.3.10",
     "gatsby-source-filesystem": "^2.0.28",
@@ -57,6 +59,7 @@
     "sharp": "^0.25.4",
     "smooth-scroll": "^16.1.3",
     "smoothscroll-polyfill": "^0.4.4",
+    "styled-components": "^5.1.1",
     "swiper": "^6.0.4"
   },
   "devDependencies": {
