--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer": "^1.2.5",
     "framer-motion": "^1.11.1",
     "gatsby": "^2.24.2",
+    "gatsby-cli": "^2.12.87",
     "gatsby-image": "^2.4.12",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-favicon": "^3.1.6",
