--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-transformer-sharp": "^2.5.10",
     "gsap": "^3.3.4",
     "kute.js": "^2.0.7",
+    "lottie-web": "^5.7.3",
     "node-sass": "^4.14.1",
     "popmotion": "^8.7.3",
     "postcss-cli": "^7.1.1",
@@ -50,6 +51,8 @@
     "react-div-100vh": "^0.3.8",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-lottie": "^1.2.3",
+    "react-lottie-player": "^1.0.1",
     "react-markdown": "^4.3.1",
     "react-pose": "^3.1.0-rc",
     "react-scroll": "^1.8.0",
