changed project name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "pool publishing",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "We are a contemporary publishing house from Vienna with a focus on illustration, graphic design and photography. We reach out to creatives from all over the world to create new and so far unseen publications.",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
