--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@stripe/stripe-js": "^1.9.0",
     "animejs": "^3.2.0",
     "autoprefixer": "^9.8.0",
+    "core-js": "^3.8.1",
     "flubber": "^0.4.2",
     "framer": "^1.2.5",
     "framer-motion": "^1.11.1",
-    "gatsby": "^2.24.2",
+    "g": "^2.0.1",
+    "gatsby": "^2.28.2",
     "gatsby-image": "^2.4.12",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-favicon": "^3.1.6",
